# polkit-dumb-agent

./: CMakeLists.txt  README.md  agent.cpp  agent.h  polkit-dumb-agent-style.desktop
